fixed accessibilty issues and also fixed horizontal scrolling

--- a/style.css
+++ b/style.css
@@ -235,6 +235,7 @@ color: var(--primary-white);
     padding-block: 1.5rem;
     position: relative;
     padding-top: 1.5rem;
+    overflow-x: hidden;
   }
 .hero-txt{
     text-align: center;
